@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.225 2009/10/31 05:24:18 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.226 2009/12/30 21:43:51 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -1269,7 +1269,7 @@ do_3dplot(
 			else {
 			    if (prefer_line_styles && label_contours) {
 				struct lp_style_type ls = thiscontour_lp_properties;
-				lp_use_properties(&ls, ++thiscontour_lp_properties.l_type);
+				lp_use_properties(&ls, ++thiscontour_lp_properties.l_type+1);
 				term_apply_lp_properties(&ls);
 			    } else {
 				(*t->linetype) (++thiscontour_lp_properties.l_type);
@@ -1361,7 +1361,16 @@ do_3dplot(
 			/* treat all the above like points */
 		    case DOTS:
 		    case POINTSTYLE:
-			cntr3d_points(cntrs, &thiscontour_lp_properties);
+			/* the following is needed, because
+			 * 'draw3d_point_unconditional()' in 'util3d.c'
+			 * calls 'term_apply_lp_properties()' again
+			 */
+			{
+			struct lp_style_type ls = thiscontour_lp_properties;
+			if (prefer_line_styles && label_contours)
+			    lp_use_properties(&ls, thiscontour_lp_properties.l_type+1);
+			cntr3d_points(cntrs, &ls);
+			}
 			break;
 
 		    default:
@@ -1907,13 +1916,6 @@ cntr3d_lines(struct gnuplot_contours *cntr, struct lp_style_type *lp)
     BoundingBox *clip_save = clip_area;
     if (splot_map)
 	clip_area = &plot_bounds;
-
-    /* user may prefer explicit line styles */
-    if (prefer_line_styles && label_contours) {
-	struct lp_style_type ls = *lp;
-	lp_use_properties(&ls, lp->l_type);
-	lp = &ls;
-    }
 
     if (draw_contour & CONTOUR_SRF) {
 	map3d_xyz(cntr->coords[0].x, cntr->coords[0].y, cntr->coords[0].z,
